--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css"
@@ -27,8 +26,8 @@
     </div>
 
     <!-- spinner -->
-    <div id="loading-spinner" class="d-flex justify-content-center">
-      <div class="spinner-border text-dark loading-spinner d-none" role="status">
+    <div id="spinner" class="text-center d-none ">
+      <div class="spinner-border text-dark loading-spinner" role="status">
         <span class="sr-only">Loading...</span>
       </div>
     </div>
