--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 
 <head>
-  <title>Title</title>
+
+  <title> Awesome Nature</title>
+  
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,9 +15,13 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css"
     integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
+
+  <!-- Search Nature -->
+
   <div class="container">
     <h4 class="mt-2 text-center">Search Image for create slider</h4>
     <div class="form-inline mt-3 d-flex justify-content-center">
@@ -25,13 +31,15 @@
       <button type="button" id="search-btn" class="btn btn-primary mb-2">Search</button>
     </div>
 
-    <!-- spinner -->
+  <!-- Loading Spinner -->
+
     <div id="spinner" class="text-center d-none ">
       <div class="spinner-border text-dark loading-spinner" role="status">
         <span class="sr-only">Loading...</span>
       </div>
     </div>
 
+  <!-- Change Duration and Create Slider -->
 
     <section class="images">
       <div class="justify-content-around align-items-center mt-3 gallery-header mb-2">
@@ -45,7 +53,9 @@
 
       </div>
     </section>
-    <!-- slider -->
+
+  <!-- slider -->
+
     <div class="main">
       <section class="mt-5" id="sliders">
 
@@ -56,8 +66,11 @@
       </div>
     </div>
   </div>
+
   <!-- Optional JavaScript -->
+
   <script src="./app.js"></script>
+
 </body>
 
 </html>
